--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,13 @@ body{
     background-color: cadetblue;
 }
 
-img{
-    width: 100%;
+h1{
+    margin: 1em;
+}
+
+#chickenBook{
+    border-radius: 5px;
+    display: block;
+    margin: 5px auto;
+    width: 40%;
 }
